Fix LP Codeblock Wrapping + Fix Mini Wkspce Ribbon

--- a/SCSS/ITS Theme/CSS Class Toggles/_CT - Minimalist Workspace.scss
+++ b/SCSS/ITS Theme/CSS Class Toggles/_CT - Minimalist Workspace.scss
@@ -58,6 +58,7 @@
 .h-wksp .side-dock-ribbon.mod-right:not(:hover) {
     opacity: 0;
     flex: 0 0 12px;
+    padding: 0;
 }
 
 .h-rib .workspace-drawer.mod-left .workspace-drawer-inner:not(:hover),
