--- a/SCSS/ITS Theme/_Embed.scss
+++ b/SCSS/ITS Theme/_Embed.scss
@@ -96,15 +96,11 @@ iframe {
     border-image: initial;
 }
 
-/*Undo Obsidian 13.26 Embed Error*/
-.markdown-embed div.markdown-preview-section { 
-    padding-bottom: unset !important; 
-    min-height: fit-content !important;
-}
-
 /* Fix Live Preview Rendered Codeblock Line Height */ 
 .cm-preview-code-block.cm-embed-block.markdown-rendered > * {
     line-height: var(--lh);
     white-space: normal;
+    word-break: keep-all;
+    word-wrap: normal;
 }
 
